# rgb-on-liquid-spike

./: .gitignore  Cargo.toml  README.md  RFC.md  docker-compose.yml
.github/workflows/: ci.yml
crates/spike-env/: Cargo.toml
crates/spike-env/src/: elements_rpc.rs  fixtures.rs  lib.rs
crates/spike-rgb-anchor/: Cargo.toml
crates/spike-rgb-anchor/src/: anchor.rs  bfa.rs  bundle.rs  lib.rs  liquid_dbc.rs  mint.rs  mpc.rs  patched_anchor.rs  rgb20.rs  rgb_real.rs  seal.rs  swap.rs
crates/spike-rgb-anchor/src/swap/: bitcoin_leg.rs  elements_leg.rs  htlc.rs
crates/spike-simplicity/: Cargo.toml
crates/spike-simplicity/programs/: mint_gate_burn_covenant.simf  mint_gate_covenant.simf  rgb_anchor_covenant.simf  staking_covenant.simf
crates/spike-simplicity/src/: main.rs
crates/spike-tapret/: Cargo.toml
crates/spike-tapret/src/: address.rs  lib.rs  tweak.rs
docker/: elements-simplicity.conf  elements.conf
docs/: index.html  usdt-options.html
scripts/: _lib.sh  bootstrap.sh  bootstrap_btc.sh  ci.sh  demo_all.sh  demo_backed_mint.sh  demo_backed_schema.sh  demo_confidential.sh  demo_htlc.sh  demo_htlc_rgb.sh  demo_mint_gate.sh  demo_mint_gate_burn.sh  demo_patched.sh  demo_rgb.sh  demo_rgb20.sh  demo_seal.sh  demo_simplicity.sh  demo_staking.sh  demo_swap.sh  demo_swap_roundtrip.sh  teardown.sh
