[workspace]
members  = [
    "crates/spike-tapret",
    "crates/spike-env",
    "crates/spike-rgb-anchor",
    "crates/spike-simplicity",
    "vendor/rgb-consensus-patched",
]
resolver = "2"

# Transitively redirect any rgb-consensus dep (e.g. via rgb-ops,
# rgb-schemas) to our patched copy. This lets us pull the rest of the
# rgb-protocol 0.11 stack while keeping the WitnessTx patch in effect.
[patch.crates-io]
rgb-consensus = { path = "vendor/rgb-consensus-patched" }

[workspace.package]
version      = "0.0.1"
edition      = "2021"
rust-version = "1.75"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/kaleidoswap/rgb-on-liquid-spike"

[workspace.dependencies]
# Crypto — drives the tapret tweak math
secp256k1            = { version = "0.29", features = ["rand", "global-context", "std"] }
bitcoin_hashes       = "0.14"
bech32               = "0.11"

# Runtime / utility
anyhow               = "1"
thiserror            = "1"
serde                = { version = "1", features = ["derive"] }
serde_json           = "1"
tokio                = { version = "1", features = ["macros", "rt-multi-thread", "process", "time"] }
reqwest              = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
hex                  = "0.4"
clap                 = { version = "4", features = ["derive"] }
tracing              = "0.1"
tracing-subscriber   = { version = "0.3", features = ["env-filter"] }

[profile.dev]
opt-level = 1   # secp256k1 is unusably slow at opt-level=0
