[package]
name         = "spike-env"
description  = "Shared helpers for the spike: minimal elementsd JSON-RPC client + fixture loader."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true

[dependencies]
anyhow             = { workspace = true }
thiserror          = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
reqwest            = { workspace = true }
hex                = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
