[package]
name         = "spike-tapret"
description  = "Naked tapret commitment on Liquid — prove + verify."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true

[dependencies]
spike-env          = { path = "../spike-env" }

secp256k1          = { workspace = true }
bitcoin_hashes     = { workspace = true }
bech32             = { workspace = true }

anyhow             = { workspace = true }
thiserror          = { workspace = true }
hex                = { workspace = true }
clap               = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

[lib]
name = "spike_tapret"
path = "src/lib.rs"

[[bin]]
name = "tapret"
path = "src/bin/tapret.rs"
